# Money-Record

./: README.md
project-income-expenditure/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  dialogchangepassword.cpp  dialogchangepassword.h  dialogchangepassword.ui  dialogexpenditure.cpp  dialogexpenditure.h  dialogexpenditure.ui  dialogincome.cpp  dialogincome.h  dialogincome.ui  dialoglogin.cpp  dialoglogin.h  dialoglogin.ui  main.cpp  resources.qrc
